After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 615603 - liboobs includes a dbus header, but does not require dbus-1 in liboobs-1.pc
liboobs includes a dbus header, but does not require dbus-1 in liboobs-1.pc
Status: RESOLVED FIXED
Product: gnome-system-tools
Classification: Deprecated
Component: liboobs
2.30.x
Other Linux
: Normal minor
: ---
Assigned To: system-tools-maint
system-tools-maint
Depends on:
Blocks:
 
 
Reported: 2010-04-12 23:23 UTC by Evan Nemerson
Modified: 2010-04-13 16:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Require D-Bus and don't include it in headers (1.50 KB, patch)
2010-04-13 11:01 UTC, Milan Bouchet-Valat
rejected Details | Review
Bug 615603 - Require libdbus-1 and don't include dbus.h (1.20 KB, patch)
2010-04-13 16:05 UTC, Milan Bouchet-Valat
committed Details | Review

Description Evan Nemerson 2010-04-12 23:23:21 UTC
oobls-object.h includes <dbus/dbus.h>, but the pkg-config file doesn't specify that dbus-1 is required. AFAICT the external API doesn't actually require the dbus header to be present, so the best solution would probably be to remove it.
Comment 1 Milan Bouchet-Valat 2010-04-13 10:44:19 UTC
Good catch, but we really require libdbus. The public API doesn't need it, so we can remove it from oobs-object.h, but we use it internally, so it should be marked as required in the pkg-config file.
Comment 2 Milan Bouchet-Valat 2010-04-13 11:01:47 UTC
Created attachment 158590 [details] [review]
Require D-Bus and don't include it in headers

We don't expose D-Bus in public API, so don't include dbus.h in our public headers. Add dbus-1 to our pkg-config file, since it's absolutely needed to build liboobs.
Comment 3 Evan Nemerson 2010-04-13 15:03:22 UTC
I think dbus-1 should be in Requires.private, not Requires.
Comment 4 Milan Bouchet-Valat 2010-04-13 16:05:25 UTC
Created attachment 158618 [details] [review]
Bug 615603 - Require libdbus-1 and don't include dbus.h

We don't expose D-Bus in public API, so don't include dbus.h in our public headers. Add dbus-1 to our pkg-config file as a private dependency, since it's absolutely needed to build liboobs.
Comment 5 Milan Bouchet-Valat 2010-04-13 16:06:27 UTC
Correct. I've pushed a fix as 0aeeeb9. Thanks for the report!