Bug 615603 - Require libdbus-1 and don't include dbus.h

We don't expose D-Bus in public API, so don't include dbus.h in our public headers. Add dbus-1 to our pkg-config file as a private dependency, since it's absolutely needed to build liboobs.

https://bugzilla.gnome.org/show_bug.cgi?id=615603